<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.udacity.catpoint</groupId>
  <artifactId>catpoint-parent</artifactId>
  <packaging>pom</packaging>
  <version>1.0-SNAPSHOT</version>
  <modules>
      <module>security</module>
    <module>image</module>
      <module>assembly</module>
  </modules>

  <name>catpoint-parent</name>
  <url>http://www.example.com</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
  </properties>

  <dependencies>
    <!-- add your dependencies here! -->
      <dependency>
          <groupId>org.testng</groupId>
          <artifactId>testng</artifactId>
          <version>7.6.1</version>
          <scope>test</scope>
      </dependency>

      <!-- https://mvnrepository.com/artifact/com.github.spotbugs/spotbugs-maven-plugin -->
      <dependency>
          <groupId>com.github.spotbugs</groupId>
          <artifactId>spotbugs-maven-plugin</artifactId>
          <version>4.7.3.0</version>
      </dependency>

      <!--    &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-assembly-plugin &ndash;&gt;-->
<!--    <dependency>-->
<!--      <groupId>org.apache.maven.plugins</groupId>-->
<!--      <artifactId>maven-assembly-plugin</artifactId>-->
<!--      <version>3.4.2</version>-->
<!--    </dependency>-->

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.8.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.8.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
<!--      <plugins>-->
<!--          <plugin>-->
<!--              <artifactId>maven-assembly-plugin</artifactId>-->
<!--              <version>3.3.0</version>-->
<!--              <configuration>-->
<!--                  <appendAssemblyId>false</appendAssemblyId> &lt;!&ndash; nicer looking jar name &ndash;&gt;-->
<!--                  <archive>-->
<!--                      <manifest>-->
<!--                          <addClasspath>true</addClasspath>-->
<!--                          <mainClass>view.CatpointApp</mainClass>-->
<!--                      </manifest>-->
<!--                  </archive>-->
<!--                  <descriptorRefs>-->
<!--                      <descriptorRef>jar-with-dependencies</descriptorRef>-->
<!--                  </descriptorRefs>-->
<!--              </configuration>-->

<!--              <executions>-->
<!--                  <execution>-->
<!--                      <id>make-assembly</id>-->
<!--                      <phase>package</phase>-->
<!--                      <goals>-->
<!--                          <goal>single</goal>-->
<!--                      </goals>-->
<!--                  </execution>-->
<!--              </executions>-->
<!--          </plugin>-->
<!--      </plugins>-->
    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
      <plugins>
<!--        <plugin>-->
<!--    &lt;!&ndash;          <groupId>org.apache.maven.plugins</groupId>&ndash;&gt;-->
<!--          <artifactId>maven-assembly-plugin</artifactId>-->
<!--          <version>3.4.2</version>-->
<!--          <configuration>-->
<!--            <archive>-->
<!--              <manifest>-->
<!--                <mainClass>-->
<!--                  view.CatpointApp-->
<!--                </mainClass>-->
<!--              </manifest>-->
<!--            </archive>-->
<!--          </configuration>-->
<!--        </plugin>-->
        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <!-- app lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
        </plugin>
<!--        <plugin>-->
<!--          <groupId>org.apache.maven.plugins</groupId>-->
<!--          <artifactId>maven-surefire-plugin</artifactId>-->
<!--          <version>3.0.0-M7</version>-->
<!--        </plugin>-->

        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.9.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-surefire-plugin</artifactId>
              <configuration>
                  <argLine>
                      --add-opens security/security.service=ALL-UNNAMED
                      --add-opens security/security.model=ALL-UNNAMED
                      --add-opens security/security.view=ALL-UNNAMED
                  </argLine>
                  <forkCount>3</forkCount>
                <reuseForks>true</reuseForks>
    <!--            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
              </configuration>
            </plugin>
      </plugins>
    </pluginManagement>
<!--      <finalName>catpoint-app</finalName>-->
  </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>4.7.3.0</version>
            </plugin>
        </plugins>
    </reporting>

</project>
